--- a/public/stylesheets/playlists.css
+++ b/public/stylesheets/playlists.css
@@ -64,6 +64,7 @@ display:none; z-index: 10; }
 display: inline-block; margin-left: 3px; }
 #playlist-stats.active { background:#fff; color:#333; border-bottom:0; padding-bottom:1px; 
 -moz-border-radius-bottomleft: 0px; border-bottom-left-radius: 0px; -webkit-border-bottom-left-radius: 0px; 
+-moz-border-radius-bottomright: 0px; border-bottom-right-radius: 0px; -webkit-border-bottom-right-radius: 0px; 
 position: relative; z-index: 101; }
 #playlist-stats.active strong { background: #FFF url(/images/ui/collage-hgroup-btn-active.png) right no-repeat; 
 padding-right: 10px; }
